# conf-rag-agents

./: .cursorrules  .gitignore  .pre-commit-config.yaml  README.md  SETUP.md  curls  host.json  pyproject.toml  requirements.txt  run_functional_tests.py  run_functional_tests_real.sh  run_test_server.py  setup_test_env.sh
.github/workflows/: ci-tests.yml  lint.yml  real-data-tests.yml
.sample_pages/: page-monitoring.json  page-pricing.json  page-setup-guide.json
api/: app.py  ask_endpoint.py  trace_stream.py  trace_stream_otel.py
api/legacy/: ask_endpoint.py
feedback/: feedback_store.py
infra/: deploy-embedding-model.sh
memory/: __init__.py  cosmos_session.py
scripts/: create_session_container.sh  create_sql_cosmos_account.sh  populate_vectors.py  seed_blob.py  seed_graph.py  seed_search_index.py
src/: __init__.py  orchestrator.py
src/agents/: clarifier.py  factory.py  orchestrator.py  prompts.py  router.py
src/agents/autogen_tools/: azure_search.py  graph_feedback.py  graph_lookup.py  graph_normalize.py  graph_tool.py  neighbor_from_doc.py  search_tool.py  tree_builder.py
src/agents/autogen_tools/agents/: reranker.py
src/agents/autogen_tools/config/: env.py
src/agents/autogen_tools/llm/: wrapper.py
src/agents/docs/: zzz_Design-plan-review-implement.md  zzz_agent_README.md  zzz_agent_quickstart_guide.md  zzz_performance_optimization_guide.md
src/agents/legacy/: orchestrator.py
src/agents/logic/: confidence.py
src/agents/storage/: blob_client.py
src/api/api_http/: __init__.py  readme.md
src/api/api_http/clarify/: __init__.py
src/api/api_http/conversation/: __init__.py
src/api/api_http/feedback/: __init__.py
src/api/api_http/health/: __init__.py
src/api/api_http/metrics/: __init__.py
src/api/api_http/query/: __init__.py
src/api/api_http/search_similar/: __init__.py
src/api/ask/: __init__.py
src/monitoring/: app_insights.py
src/services/: __init__.py  graph.py  search.py  session.py
src/utils/: conversation.py  keyvault.py  logging.py  page_tree.py
tests/: __init__.py  conftest.py  test_tracing_functional.py
tests/functional/: __init__.py
tests/helpers/: __init__.py
tests/integration/: README_RETRIEVAL_GRAPH_TESTS.md
tests/smoke/: __init__.py
tests/unit/: __init__.py
tracing/: autogen_tracer.py  logger.py  otel_config.py
utils/: keyvault.py
